# Test_Repo

./: .gitignore
backEndServer/: Cargo.toml
backEndServer/src/: auth.rs  error.rs  main.rs  polls.rs  startup.rs
webauthn-frontend/: next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
webauthn-frontend/.next/: trace
webauthn-frontend/.next/cache/webpack/client-development/: index.pack.gz.old
webauthn-frontend/.next/cache/webpack/server-development/: index.pack.gz.old
webauthn-frontend/.next/server/: _error.js
webauthn-frontend/.next/server/app/: page.js  page_client-reference-manifest.js
webauthn-frontend/.next/server/pages/: _app.js  _document.js  _error.js
webauthn-frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
webauthn-frontend/.next/static/chunks/app/: layout.js  page.js
webauthn-frontend/.next/static/development/: _buildManifest.js
webauthn-frontend/.next/static/webpack/: webpack.08bbe3671c2a994f.hot-update.js  webpack.47e802a9e1ab90c6.hot-update.js  webpack.6f798df579927b02.hot-update.js
webauthn-frontend/.next/types/app/: layout.ts  page.ts
webauthn-frontend/app/: layout.tsx  page.tsx  store.ts  uniswapStyles.ts
webauthn-frontend/app/api/[...path]/: route.ts
webauthn-frontend/app/hooks/: usePolls.ts
webauthn-frontend/app/login/: page.tsx
webauthn-frontend/app/polls/[pollId]/: page.tsx
webauthn-frontend/app/polls/manage/: page.tsx
webauthn-frontend/app/polls/new/: page.tsx
webauthn-frontend/app/register/: page.tsx
webauthn-frontend/app/utils/: auth.ts
(+2 files in other folders)
