[package]
name = "backEndServer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
serde = { version = "1.0.141", features = ["derive"] }
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
axum = { version = "0.7" }
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
url = "2"
thiserror = "1.0.37"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs","cors"] }
tower-sessions = "0.13"
mongodb = "2.0"
# In backEndServer/Cargo.toml
