[package]
name = "backEndServer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.22.0", features = ["full"] }
tower-sessions = "0.13"
tower-http = { version = "0.6", features = ["fs", "cors"] }
http = "1.2.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
mongodb = "2.0"
serde = { version = "1.0.141", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] }
url = "2"
thiserror = "1.0.37"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-stream = "0.3"
chrono = "0.4"       # Added for time calculations
serde_json = "1.0"   # Added for JSON serialization